# Information-Technology

./: README.md
COMP6713/: .gitignore  README.md
COMP6713/ass1/: boilerplate.py  poetry_dataset.tsv
COMP6713/project/: model.ipynb  pre-neural.ipynb
COMP6713/tut/: tut2.ipynb  tut3.ipynb  tut4.ipynb  tut5.ipynb  tut6.ipynb  tut7.ipynb  tut8.ipynb
COMP6841/: README.md
COMP6841/exam/: Part C.txt  Parts A_B.txt
COMP6843/: LICENSE  README.md
COMP6991/: .gitignore  README.md
COMP6991/exam/exam_q5/: Cargo.toml
COMP6991/exam/exam_q5/src/: lib.rs  main.rs  main_alt.rs  main_alt2.rs  main_alt3.rs
COMP6991/workshop/ws05/: Cargo.toml  phys_simulation.html  topic.md
COMP6991/workshop/ws05/src/: lib.rs  main.rs
COMP6991/workshop/ws05/src/directions/: coordinate.rs  direction.rs  mod.rs
COMP6991/workshop/ws07/: Cargo.toml  topic.md
COMP6991/workshop/ws07/example_programs/: print_randoms.rs  program_runner.rs
COMP6991/workshop/ws07/src/: main.rs
COMP9313/: .gitignore  README.md
COMP9315/: .gitignore  README.md
COMP9315/ass1/: pname.c  pname.source
COMP9315/ass2/: CMakeLists.txt  query.c  reln.c  tuple.c
COMP9319/: README.md
COMP9319/ass1/: CMakeLists.txt  README.md  autotest  ldecode.cpp  lencode.cpp  random_gen.py
COMP9319/ass2/: CMakeLists.txt  README.md  bwt.h  index.h  main.cpp  makefile  occ.h  support.h
COMP9319/exercise/: Ex1.md  Ex2.md  Ex3.md  Ex4.md  Ex5.md  Ex6.md
COMP9444/: .gitignore  README.md
COMP9444/assignment/: .gitignore  README.md  anbn.py  check.csv  check.py  check_main.py  hw1.md  kuzu.py  kuzu_main.py  reber.py  seq_plot.py
COMP9444/demo/: Basic_Autograd.html  ConvNet_MNIST_Classification.html  LLM-VectorDB.html  Language_Modelling_with_NLTK.html  Multi_class_image_classification.html  Quora_Insincere_Questions_Classification-_CountVectorizer.html  Sentiment_RNN_V2.html  Simple_Feed-Forward_Network.html  Simple_Linear_Regression.html  Simple_Logistic_Regression.html  Solving_Word_Analogies_using_Word_Embeddings.html  Understanding_And_Visualizing_Word_Embeddings.html  Week_5_Demo_-_Char_RNN_classification.html  Week_5_Demo_-_Char_RNN_generation.html  Word2Vec_in_Gensim.html  chatbot.py  cifar10_tutorial.html
COMP9444/project/: pre-paper.md
COMP9517/: README.md
COMP9517/project/: FCN_FPN.ipynb
COMP9727/: .gitignore  README.md
COMP9727/assignment/: requirements.txt  user1.tsv  user2.tsv  z5286124.ipynb
COMP9727/project/: COMP9727.ipynb  pre-paper.md
COMP9727/tut/: tut01.ipynb  tut02.ipynb  (+3 more)
(+411 files in other folders)
