[package]
name = "ws05"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rouille = "3.5.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[[bin]]
name = "simulator"
path = "src/main.rs"

[lib]
name = "simulator_lib"
path = "src/lib.rs"
